Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6(EOL)
-
None
Description
The functions fil_file_readdir_next_file(), os_file_opendir(), os_file_closedir() became dead code in the server in MariaDB 10.4.0 with the removal of the crash recovery logic for the TRUNCATE implementation that was introduced in MariaDB Server 10.2.2 and replaced in MDEV-13564.
These functions are only used in mariabackup and not in MariaDB Server at all. Hence, the code must be moved to mariabackup.
Attachments
Issue Links
- relates to
-
MDEV-13564 TRUNCATE TABLE and undo tablespace truncation are not compatible with Mariabackup
-
- Closed
-
-
MDEV-24044 mariabackup --backup: [ERROR] InnoDB: File <file>: 'opendir' returned OS error 71
-
- Closed
-